# ray-tracer-challenge-cpp

./: .gitignore  2  CMakeLists.txt  Ex001.ppm  Ex002.ppm  Ex003-a.ppm  Ex003-s.ppm  main.cpp  worked.txt
Materials/: Checker.cpp  Checker.h  Color.cpp  Color.h  Gradient.cpp  Gradient.h  Material.h  Pattern.cpp  Pattern.h  Ring.cpp  Ring.h  Stripes.cpp  Stripes.h
Math/: Constants.h  Floats.cpp  Floats.h  Matrix.cpp  Matrix.h  Tuple.cpp  Tuple.h  tuple.cpp  tuple.h
Parse/: PPM.cpp  PPM.h
Shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Intersection.cpp  Intersection.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
World/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Light.cpp  Light.h  World.cpp  World.h
exercises/: 001_red_circle.cpp  002_purple_ball.cpp  002_purple_ball.h  003_camera.cpp  003_camera.h  004_plane.cpp  004_plane.h  005_patterns.cpp  005_patterns.h  006_glass.cpp  006_glass.h  007_cubes.cpp  007_cubes.h  008_cylinder_and_cone.cpp  008_cylinder_and_cone.h  exercises.h  red_circle.cpp  red_circle.h
output/: Ex001.ppm  Ex002-a.ppm  Ex004-s.ppm  Ex006-t.ppm  Ex006.ppm  Ex007.ppm
tests/Materials/: Pattern_tests.cpp
tests/Math/: Floats_tests.cpp  Matrix_tests.cpp  Tuple_tests.cpp
tests/Parse/: PPM_test.cpp
tests/Shapes/: Cube_tests.cpp  Cylinder_tests.cpp  Intersection_test.cpp  Plane_tests.cpp  Ray_test.cpp  Sphere_tests.cpp
tests/World/: Camera_tests.cpp  Canvas_tests.cpp  Light_tests.cpp  World_tests.cpp
